# viltkamera-old-import

./: .copier-answers.yml  .env.example  README.md  in_range.py  main.py  prek.toml  pyproject.toml
.github/workflows/: prek.yml  zizmor.yml
libs/: logger.py  models.py  parquet.py
old_import/: camera_lookup.csv  camera_lookup.sql  in_range.py  main.py  parquet.py  utils.py
